fixed padding on small screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -118,7 +118,7 @@ p {
   }
   .about-section {
     text-align: center;
-    padding: 0;
+    padding: 80px 20px;
   }
 
   .project-desciption {
